API works with PHP CGI

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,10 @@
+SetEnv PHP_VER 5
+
+<IfModule mod_rewrite.c>
+    RewriteEngine on
+    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization},L]
+</IfModule>
+
 ErrorDocument 404 "<!DOCTYPE html>\
 <html>\
     <head>\
